--- a/package.json
+++ b/package.json
@@ -11,13 +11,15 @@
   "dependencies": {
     "@vercel/analytics": "^1.5.0",
     "contentful": "^11.5.7",
-    "framer-motion": "^12.5.0",
+    "framer-motion": "^12.10.5",
+    "mongodb": "^6.16.0",
     "next": "15.2.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-scroll": "^1.9.3",
-    "recharts": "^2.15.3"
+    "recharts": "^2.15.3",
+    "tailwind-scrollbar-hide": "^2.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
