--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@vercel/analytics": "^1.5.0",
+    "@vercel/speed-insights": "^1.2.0",
     "contentful": "^11.5.7",
     "framer-motion": "^12.10.5",
     "mongodb": "^6.16.0",
+    "mongoose": "^8.14.2",
     "next": "15.2.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
