--- a/package.json
+++ b/package.json
@@ -15,13 +15,14 @@
     "framer-motion": "^12.10.5",
     "mongodb": "^6.16.0",
     "mongoose": "^8.14.2",
-    "next": "15.2.2",
+    "next": "^15.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-scroll": "^1.9.3",
     "recharts": "^2.15.3",
-    "tailwind-scrollbar-hide": "^2.0.0"
+    "tailwind-scrollbar-hide": "^2.0.0",
+    "vercel": "^41.7.4"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
