--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
     "contentful": "^11.5.7",
-    "framer-motion": "^12.10.5",
+    "framer-motion": "^12.23.6",
+    "gsap": "^3.13.0",
     "mongodb": "^6.16.0",
     "mongoose": "^8.14.2",
     "next": "^15.3.2",
@@ -27,6 +28,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/react": "19.1.8",
     "eslint": "^9",
     "eslint-config-next": "15.2.2",
     "tailwindcss": "^4"
