--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-masonry-css": "^1.0.16",
     "react-scroll": "^1.9.3",
     "recharts": "^2.15.3",
     "tailwind-scrollbar-hide": "^2.0.0",
