--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "@vercel/speed-insights": "^1.2.0",
     "contentful": "^11.5.7",
     "framer-motion": "^12.23.6",
+    "gray-matter": "^4.0.3",
     "gsap": "^3.13.0",
+    "lucide-react": "^0.525.0",
     "mongodb": "^6.16.0",
     "mongoose": "^8.14.2",
     "next": "^15.3.2",
+    "next-mdx-remote": "^5.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
