--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-masonry-css": "^1.0.16",
     "react-scroll": "^1.9.3",
     "recharts": "^2.15.3",
+    "tailwind-scrollbar": "^4.0.2",
     "tailwind-scrollbar-hide": "^2.0.0",
     "vercel": "^41.7.4"
   },
