--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@mdx-js/loader": "^3.1.0",
     "@mdx-js/react": "^3.1.0",
     "@next/mdx": "^15.4.4",
+    "@react-three/drei": "^10.7.6",
+    "@react-three/fiber": "^9.3.0",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
     "contentful": "^11.5.7",
@@ -31,6 +33,7 @@
     "recharts": "^2.15.3",
     "tailwind-scrollbar": "^4.0.2",
     "tailwind-scrollbar-hide": "^2.0.0",
+    "three": "^0.180.0",
     "vercel": "^41.7.4"
   },
   "devDependencies": {
